# goodixdriver-linux-fix

./: meson.build
libfprint/: fp-context.c  meson.build
libfprint/drivers/: meson.build
libfprint/drivers/goodixtls/: goodix.c  goodix511.c  goodix55x4.c  goodixtls.c  meson.build
libfprint/sigfm/: meson.build
